<resources>
  <string name="load_mrect">Load</string>
  <string name="load_interstitial">Load</string>
  <string name="navigate_to_native_screen">Navigate To Native Screen</string>
  <string name="load_native_ad">Load Native Ad</string>
  <string name="show_interstitial">Show</string>
  <string name="interstitial_header">Interstitial</string>
  <string name="native_header">Native</string>
  <string name="interstitial_descriptionr">Sample ad will play in full screen</string>
  <string name="mrect_header">MRECT</string>
</resources>